<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddressFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_address"
        style="@style/title">
    </TextView>

    <TextView
        android:id="@+id/text_address_name"
        android:labelFor="@+id/edit_address_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name">
    </TextView>

    <EditText
        android:id="@+id/edit_address_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_g_home">
    </EditText>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add">
    </Button>

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_error"
        android:visibility="invisible">
    </TextView>

    <TextView
        android:id="@+id/text_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_addresses"
        style="@style/title">
    </TextView>

    <ListView
        android:id="@+id/list_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>