<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activity.DayActivity">

    <TextView
        android:id="@+id/textDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title"
        android:text="@string/day_of_week"
        android:paddingBottom="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/start_time"
            android:gravity="fill"
            android:layout_gravity="fill"/>

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:hint="@string/select"
            android:focusable="false"
            android:onClick="selectTime"/>

    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length_of_commute"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>

        <Spinner
            android:id="@+id/spinner_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/minute"/>
        <Spinner
            android:id="@+id/spinner_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="fill"
            android:layout_gravity="fill"
            android:text="@string/start_address"/>

        <EditText
            android:id="@+id/edit_start_address"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:hint="@string/select"
            android:focusable="false"
            android:onClick="selectStartAddress"/>

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="fill"
            android:layout_gravity="fill"
            android:text="@string/end_address"/>

        <EditText
            android:id="@+id/edit_end_address"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:hint="@string/select"
            android:focusable="false"
            android:onClick="selectEndAddress"/>

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="fill"
            android:layout_gravity="fill"
            android:text="@string/travel_method"/>

        <Spinner
            android:id="@+id/spinnerTravelMethod"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill">
        </Spinner>
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:onClick="addSchedule"/>

</LinearLayout>